--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@asymmetrik/ngx-leaflet": "5.0.1",
     "@ngrx/store": "7.2.0",
     "@swimlane/ngx-charts": "10.0.0",
+    "@syncfusion/ej2-angular-calendars": "^18.3.42",
+    "@syncfusion/ej2-angular-grids": "^18.3.44",
     "@types/jquery": "3.3.29",
+    "angular-in-memory-web-api": "^0.11.0",
     "animate.css": "3.7.0",
     "chart.js": "2.7.3",
     "core-js": "2.5.4",
